--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
 	"version" : "0.1.1",
 	"description" : "censor word out of text",
 	"main" : "censortext",
+	"repository": {
+		"type": "git",
+		"url": "http://github.com/bwdayley/nodebook/tree/master/ch03/censorify"
+	 },
+	"keywords": [
+     	"censor",
+     	"words"
+     ],
 	"dependecies" : {},
 	"engines" : {
 		"node" : "*"
