--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-	"author" : "Massimo Carucci",
-	"name" : "censorify",
-	"version" : "0.1.1",
-	"description" : "censor word out of text",
-	"main" : "censortext",
-	"repository": {
-		"type": "git",
-		"url": "http://github.com/bwdayley/nodebook/tree/master/ch03/censorify"
-	 },
-	"keywords": {
-     	"censor",
-     	"words"
-     },
-	"dependecies" : {},
-	"engines" : {
-		"node" : "*"
-	}
+        "author" : "Massimo Carucci",
+        "name" : "censorify",
+        "version" : "0.1.1",
+        "description" : "censor word out of text",
+        "main" : "censortext",
+        "repository": {
+        	"type":"git",
+        	"url":"https://github.com/massimocarucci/censorify"
+        },
+        "keywords": [
+        	"censor",
+        	"word"
+        ],
+        "dependecies" : {
+
+        },
+        "engines" : {
+                "node" : "*"
+        }
 }
